--- a/demos/demo-app.html
+++ b/demos/demo-app.html
@@ -58,46 +58,13 @@
               <h3>{{ activeDemo.label }}</h3>
             </div>
             <div class="col-md-6">
-              <button
-                class="btn btn-info pull-right"
-                (click)="editInPlunker(activeDemo)">
-                <i class="fa fa-edit"></i> Edit in Plunker
-              </button>
             </div>
           </div>
         </div>
         <div class="card-body">
-
-          <ngb-tabset [destroyOnHide]="false">
-
-            <ngb-tab>
-              <ng-template ngbTabTitle>
-                <i class="fa fa-fw fa-laptop"></i> Live demo
-              </ng-template>
-              <ng-template ngbTabContent>
-                <div class="spacer-top"><router-outlet></router-outlet></div>
-              </ng-template>
-            </ngb-tab>
-
-            <ngb-tab *ngFor="let source of activeDemo?.sources">
-              <ng-template ngbTabTitle>
-                <span [ngSwitch]="source.language">
-                  <i class="fa fa-fw fa-html5" *ngSwitchCase="'html'"></i>
-                  <i class="fa fa-fw fa-css3" *ngSwitchCase="'css'"></i>
-                  <i class="fa fa-fw fa-code" *ngSwitchDefault></i>
-                </span>
-                {{ source.filename }}
-              </ng-template>
-              <ng-template ngbTabContent>
-                <pre><code
-                  mwlHighlightJs
-                  [source]="source.contents"
-                  [language]="source.language">
-                </code></pre>
-              </ng-template>
-            </ngb-tab>
-
-          </ngb-tabset>
+          <div class="spacer-top">
+            <router-outlet></router-outlet>
+          </div>
         </div>
       </div>
     </div>
